--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "coined",
-  "description": "Highlevel wrapper around BCoin",
-  "author": "Christopher Jeffrey",
+  "name": "coined-uro",
+  "description": "Highlevel wrapper around BCoin for Uro",
+  "author": "Christopher Jeffrey and Bohan Huang",
   "version": "0.0.5",
-  "main": "./lib/coined.js",
-  "bin": "./bin/coined",
-  "man": "./man/coined.1",
+  "main": "./lib/coined-uro.js",
+  "bin": "./bin/coined-uro",
+  "man": "./man/coined-uro.1",
   "preferGlobal": false,
-  "repository": "git://github.com/chjj/coined.git",
-  "homepage": "https://github.com/chjj/coined",
-  "bugs": { "url": "http://github.com/chjj/coined/issues" },
-  "license": "MIT",
+  "repository": "git://github.com/uro-/coined-uro.git",
+  "homepage": "https://github.com/uro-/coined-uro",
+  "bugs": { "url": "http://github.com/uro-/coined-uro/issues" },
+  "license": "GPLv3",
   "tags": ["bcoin", "bitcoin", "coined"],
   "dependencies": {
-    "bcoin": ">=0.14.2",
-    "tiny": ">=0.0.10"
+    "bcoin-uro": ">=0.14.2",
+    "memdown": ">=0.10.1"
   },
   "scripts": {
     "test": "node test",
